@@ -67,7 +67,7 @@ public class DMDocumentManagementUploader {
                 uploadResponse
                     .getEmbedded()
                     .getDocuments()
-                    .get(0);
+                    .getFirst();
 
             return new Document(
                 uploadedDocument
