@@ -56,7 +56,7 @@ public class CDAMSystemDocumentManagementUploader {
                 Collections.singletonList(file)
             );
 
-        uk.gov.hmcts.reform.ccd.document.am.model.Document uploadedDocument = uploadResponse.getDocuments().get(0);
+        uk.gov.hmcts.reform.ccd.document.am.model.Document uploadedDocument = uploadResponse.getDocuments().getFirst();
 
         return new Document(
             uploadedDocument.links.self.href,
