@@ -7,10 +7,10 @@ import static uk.gov.hmcts.reform.iacaseapi.domain.entities.AsylumCaseFieldDefin
 import static uk.gov.hmcts.reform.iacaseapi.domain.entities.Parties.APPELLANT;
 import static uk.gov.hmcts.reform.iacaseapi.domain.entities.Parties.RESPONDENT;
 
+import java.time.LocalDate;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
-import org.joda.time.LocalDate;
 import org.springframework.stereotype.Component;
 import uk.gov.hmcts.reform.iacaseapi.domain.entities.AsylumCase;
 import uk.gov.hmcts.reform.iacaseapi.domain.entities.DocumentWithDescription;
@@ -22,7 +22,9 @@ import uk.gov.hmcts.reform.iacaseapi.domain.entities.ccd.callback.PreSubmitCallb
 import uk.gov.hmcts.reform.iacaseapi.domain.entities.ccd.callback.PreSubmitCallbackStage;
 import uk.gov.hmcts.reform.iacaseapi.domain.entities.ccd.field.IdValue;
 import uk.gov.hmcts.reform.iacaseapi.domain.handlers.PreSubmitCallbackHandler;
-import uk.gov.hmcts.reform.iacaseapi.domain.service.*;
+import uk.gov.hmcts.reform.iacaseapi.domain.service.Appender;
+import uk.gov.hmcts.reform.iacaseapi.domain.service.FeatureToggler;
+import uk.gov.hmcts.reform.iacaseapi.domain.service.FtpaDisplayService;
 
 @Component
 public class FtpaMigrateLegacyDataHandler implements PreSubmitCallbackHandler<AsylumCase> {
@@ -86,13 +88,13 @@ public class FtpaMigrateLegacyDataHandler implements PreSubmitCallbackHandler<As
         if (existingApplications.isEmpty()) {
             for (String party : parties) {
                 boolean isFtpaDecidedBefore = asylumCaseBefore
-                        .read(valueOf(String.format("FTPA_%s_RJ_DECISION_OUTCOME_TYPE", party.toUpperCase()))).isPresent();
+                        .read(valueOf("FTPA_%s_RJ_DECISION_OUTCOME_TYPE".formatted(party.toUpperCase()))).isPresent();
                 if (isFtpaDecidedBefore) {
                     existingApplications = migrateFtpaDecided(asylumCaseBefore, existingApplications, party);
                 }
 
                 boolean isFtpaStartedBefore = asylumCaseBefore
-                        .read(valueOf(String.format("FTPA_%s_GROUNDS_DOCUMENTS", party.toUpperCase()))).isPresent();
+                        .read(valueOf("FTPA_%s_GROUNDS_DOCUMENTS".formatted(party.toUpperCase()))).isPresent();
                 if (isFtpaStartedBefore) {
                     existingApplications = migrateFtpaStarted(asylumCaseBefore, existingApplications, party);
                 }
@@ -111,7 +113,7 @@ public class FtpaMigrateLegacyDataHandler implements PreSubmitCallbackHandler<As
         final String ftpaApplicantUpperCase = ftpaApplicantType.toUpperCase();
 
         String applicationDate = asylumCaseBefore
-                .read(valueOf(String.format("FTPA_%s_APPLICATION_DATE", ftpaApplicantUpperCase)), String.class)
+                .read(valueOf("FTPA_%s_APPLICATION_DATE".formatted(ftpaApplicantUpperCase)), String.class)
                 .orElseThrow(() -> new IllegalStateException("ftpaApplicationDate is not present"));
 
         Optional<IdValue<FtpaApplications>> existingFtpaApplication = existingApplications.stream()
@@ -124,13 +126,13 @@ public class FtpaMigrateLegacyDataHandler implements PreSubmitCallbackHandler<As
                 : FtpaApplications.builder().ftpaApplicant(ftpaApplicantType).build();
 
         final Optional<List<IdValue<DocumentWithDescription>>> maybeGroundsDocument =
-                asylumCaseBefore.read(valueOf(String.format("FTPA_%s_GROUNDS_DOCUMENTS", ftpaApplicantUpperCase)));
+                asylumCaseBefore.read(valueOf("FTPA_%s_GROUNDS_DOCUMENTS".formatted(ftpaApplicantUpperCase)));
         final Optional<List<IdValue<DocumentWithDescription>>> maybeFtpaEvidence =
-                asylumCaseBefore.read(valueOf(String.format("FTPA_%s_EVIDENCE_DOCUMENTS", ftpaApplicantUpperCase)));
+                asylumCaseBefore.read(valueOf("FTPA_%s_EVIDENCE_DOCUMENTS".formatted(ftpaApplicantUpperCase)));
         final Optional<List<IdValue<DocumentWithDescription>>> maybeOutOfTimeDocuments =
-                asylumCaseBefore.read(valueOf(String.format("FTPA_%s_OUT_OF_TIME_DOCUMENTS", ftpaApplicantUpperCase)));
+                asylumCaseBefore.read(valueOf("FTPA_%s_OUT_OF_TIME_DOCUMENTS".formatted(ftpaApplicantUpperCase)));
         final String ftpaOutOfTimeExplanation =
-                asylumCaseBefore.read(valueOf(String.format("FTPA_%s_OUT_OF_TIME_EXPLANATION", ftpaApplicantUpperCase)), String.class)
+                asylumCaseBefore.read(valueOf("FTPA_%s_OUT_OF_TIME_EXPLANATION".formatted(ftpaApplicantUpperCase)), String.class)
                         .orElse("");
 
         newFtpaApplication.setFtpaApplicationDate(applicationDate);
