@@ -163,7 +163,7 @@ class AutoBuildCaseDirectionHandlerTest {
         List<IdValue<Direction>> actualExistingDirections =
             existingDirectionsCaptor
                 .getAllValues()
-                .get(0);
+                .getFirst();
 
         assertEquals(0, actualExistingDirections.size());
 
